[package]
name = "pglb"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
color-eyre = "0.6"
tokio = { version = "1.33", features = ["full"] }
futures = "0.3"
tracing = { version = "0.1", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
thiserror = "1.0.50"

[dev-dependencies]
assert_cmd = { version = "2.0.12", features = ["color", "color-auto"] }
criterion = "0.5.1"
glommio = "0.8.0"
io-uring = "0.6.2"
libc = "0.2.149"
postgres = "0.19.7"
slab = "0.4.9"
tokio-uring = { git = "https://github.com/tokio-rs/tokio-uring" }

[[bench]]
name = "tcp_proxy"
harness = false
